[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/principalMedias.gd" type="Script" id=1]
[ext_resource path="res://imagens/icon.png" type="Texture" id=2]
[ext_resource path="res://cenas/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://cenas/PerguntasMedias.tscn" type="PackedScene" id=4]
[ext_resource path="res://videos/Abacaxi.ogv" type="VideoStream" id=5]
[ext_resource path="res://fonts/JandaCurlygirlChunky.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
placarPath = NodePath("placar")
videoFrutaPath = NodePath("videoFruta")
fruta1Path = NodePath("Botões/Fruta1/SpriteFruta1")
fruta2Path = NodePath("Botões/Fruta2/SpriteFruta2")
fruta3Path = NodePath("Botões/Fruta3/SpriteFruta3")
fruta4Path = NodePath("Botões/Fruta4/SpriteFruta4")
perguntasMediasPath = NodePath("PerguntasMedias")
timerPath = NodePath("Timer")

[node name="Botões" type="CanvasLayer" parent="."]

[node name="Fruta1" type="Button" parent="Botões"]
margin_left = 530.0
margin_top = 145.0
margin_right = 730.0
margin_bottom = 295.0

[node name="SpriteFruta1" type="Sprite" parent="Botões/Fruta1"]
texture = ExtResource( 2 )
centered = false

[node name="Fruta2" type="Button" parent="Botões"]
margin_left = 780.0
margin_top = 145.0
margin_right = 980.0
margin_bottom = 295.0

[node name="SpriteFruta2" type="Sprite" parent="Botões/Fruta2"]
texture = ExtResource( 2 )
centered = false

[node name="Fruta3" type="Button" parent="Botões"]
margin_left = 530.0
margin_top = 335.0
margin_right = 730.0
margin_bottom = 485.0

[node name="SpriteFruta3" type="Sprite" parent="Botões/Fruta3"]
texture = ExtResource( 2 )
centered = false

[node name="Fruta4" type="Button" parent="Botões"]
margin_left = 780.0
margin_top = 335.0
margin_right = 980.0
margin_bottom = 485.0

[node name="SpriteFruta4" type="Sprite" parent="Botões/Fruta4"]
texture = ExtResource( 2 )
centered = false

[node name="Background" parent="." instance=ExtResource( 3 )]
layer = -1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PerguntasMedias" parent="." instance=ExtResource( 4 )]

[node name="videoFruta" type="VideoPlayer" parent="."]
margin_left = 138.0
margin_top = 582.0
margin_right = 619.0
margin_bottom = 852.0
rect_rotation = 270.0
stream = ExtResource( 5 )

[node name="placar" type="RichTextLabel" parent="."]
margin_left = 722.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 58.0
custom_fonts/normal_font = SubResource( 1 )
text = " Pontuação : 0"
scroll_active = false
[connection signal="button_up" from="Botões/Fruta1" to="." method="_on_Fruta1_button_up"]
[connection signal="button_up" from="Botões/Fruta2" to="." method="_on_Fruta2_button_up"]
[connection signal="button_up" from="Botões/Fruta3" to="." method="_on_Fruta3_button_up"]
[connection signal="button_up" from="Botões/Fruta4" to="." method="_on_Fruta4_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="videoFruta" to="." method="_on_videoFruta_finished"]
